v0.0.2, Tue 04, March 2014 -- Refactor
- renamed zip var to zf to avoid clobering zip builtin
- created functions for public key, private key creation and signing
- added .travis.yml and test case placeholder
- setup.py for easy installation
- added swig as os level dependency within README

v0.0.1, Fri 02, Jul 2010  -- Initial Release. (bellbind)